objects/advpm__Export_Template__c.object
<CustomObject>
    <customHelpPage>advpm__HelpExportTemplate</customHelpPage>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Export_Field_Set__c</fullName>
        <label>Export Field Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Field_To_Mark_Record_As_Exported__c</fullName>
        <label>Field To Mark Record As Exported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Field_To_Record_Exported_By_User__c</fullName>
        <label>Field To Record Exported By User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Field_To_Record_Timestamp_Of_Record__c</fullName>
        <label>Field To Record Timestamp Of Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Related_Object__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Use_Field_Labels_As_Column_Headers__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this box, if you want exported file&apos;s column headers to be field labels instead of field API names.</inlineHelpText>
        <label>Use Field Labels As Column Headers</label>
        <type>Checkbox</type>
    </fields>
    <label>Export Template</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Related_Object__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Export Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Export Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>